--- a/styles/components/_list.scss
+++ b/styles/components/_list.scss
@@ -5,12 +5,12 @@ $list-wnd-height: 30px;
 $list-item-color: $rc-text-primary;
 $list-item-bg-hover: $rc-component-bg;
 //折叠按钮宽度
-$list-arrow-width: 20px;
+$list-arrow-width: 16px;
 $list-button-border-radius: $rc-bradius-extra-small;
 $list-button-bg-hover: $rc-component-button;
 
 //子列表缩进左边距
-$list-left: 20px;
+$list-left: 22px;
 //子列表缩进最大深度
 $list-depth: 7;
 
@@ -28,16 +28,6 @@ $list-item-meta-color-focus: $brand-4;
 :root {
   // 列表
   --b3-list-hover: #{$list-item-bg-hover};
-}
-
-%first_list_item {
-  position: relative;
-  background-color: $rc-component-bg;
-  padding-left: 8px;
-
-  &::before {
-    @include focus_before(8px, 0px);
-  }
 }
 
 .b3-list-item {
@@ -60,6 +50,7 @@ $list-item-meta-color-focus: $brand-4;
   .b3-list-item__toggle {
     height: $list-text-height;
     padding: 0 !important;
+    margin-right: 1px;
 
     // 无子元素
     &.fn__hidden {
@@ -205,28 +196,27 @@ $list-item-meta-color-focus: $brand-4;
   }
 
   // 子元素向右缩进 && 左侧辅助线
-  &+ul {
-    position: relative;
+  // 循环阴影辅助线
+  @function cyclic($cur) {
 
-    // 左侧辅助线
-    &::before {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 2px;
-      width: 0px;
-      height: calc(100% - 2px);
-      border-left: 1px solid $rc-border-3;
+    $side-margin: calc(6px + $list-arrow-width / 2);
+    $temp: "#{$side-margin - 1px} 0 #{$rc-container-bg} inset, #{$side-margin} 0 #{$rc-border-3} inset";
+
+    @if $cur >1 {
+      @for $i from 1 to $cur {
+        $side-margin: calc($list-left * $i + 6px + $list-arrow-width / 2);
+        $temp : $temp +", "+"#{$side-margin - 1px} 0 #{$rc-container-bg} inset, #{$side-margin} 0 #{$rc-border-3} inset";
+      }
     }
+
+    @return $temp;
+
   }
 
   // 递归函数
   @mixin recursive-item-margin($cur, $end) {
     +ul {
-
-      &::before {
-        left: calc(#{$list-left} * #{$cur} - #{$list-left} / 2);
-      }
+      box-shadow: #{cyclic($cur)};
 
       &>.b3-list-item {
         margin-left: $list-left * $cur  !important;
@@ -240,11 +230,6 @@ $list-item-meta-color-focus: $brand-4;
 
   @include recursive-item-margin(1, $list-depth);
 
-  // 文档树笔记本加粗
-  &[data-type="navigation-root"] {
-    margin-bottom: 8px;
-    @extend %first_list_item;
-  }
 }
 
 .b3-list,
@@ -258,12 +243,28 @@ $list-item-meta-color-focus: $brand-4;
   }
 }
 
+%first_list_item {
+  position: relative;
+  background-color: $rc-component-bg;
+
+  &::before {
+    @include focus_before(8px, 0px);
+  }
+}
+
+// 文档树笔记本
+[data-type="navigation-root"] {
+  margin-bottom: 8px;
+  @extend %first_list_item;
+}
+
 // 大纲
 .sy__outline {
 
   // 标题
   >.b3-list-item {
     margin: 0 8px 8px;
+    padding-left: 8px;
     @extend %first_list_item;
 
     &:hover {
@@ -274,7 +275,7 @@ $list-item-meta-color-focus: $brand-4;
       @include emoji_icon($list-text-height, 12px, 12px);
     }
 
-    &:empty{
+    &:empty {
       margin: 0;
       padding: 0;
     }
@@ -313,7 +314,7 @@ $list-item-meta-color-focus: $brand-4;
     @extend %first_list_item;
 
     // 书签图标
-    .b3-list-item__graphic{
+    .b3-list-item__graphic {
       display: none;
     }
   }
