fix: :bug: 修复设置界面边栏列表的样式

--- a/styles/pages/dialog/_big.scss
+++ b/styles/pages/dialog/_big.scss
@@ -68,7 +68,7 @@ $dialog-label-text: $rc-text-secondary;
 
       // 导航按钮
       .b3-list-item--big {
-        padding: 16px 24px;
+        padding: 16px 24px !important;
         margin: 8px 0 0 !important;
 
         &:first-child {
