fix: :bug: 修改wnd圆角

--- a/styles/layout/_wnd.scss
+++ b/styles/layout/_wnd.scss
@@ -1,6 +1,6 @@
 $wnd-scale: scale(0.9);
 $wnd-border: none;
-$wnd-bradius: $rc-bradius-medium;
+$wnd-bradius: $rc-bradius-large;
 $wnd-bg: $rc-container-bg;
 $wnd-shadow: none; //rc-shadow(1);
 //边窗动画
