fix: :bug: 修改辅助条圆角

--- a/styles/utils/_mixin.scss
+++ b/styles/utils/_mixin.scss
@@ -87,7 +87,7 @@
   opacity: 1;
   background-color: $rc-brand;
   margin: 0;
-  border-radius: 25%;//$rc-bradius-max;
+  border-radius: $rc-bradius-max;
 }
 
 @mixin emoji_icon($width, $fz, $icon-width) {
