feat: :sparkles: 更改iframe块样式

--- a/styles/pages/editor/_index.scss
+++ b/styles/pages/editor/_index.scss
@@ -11,6 +11,8 @@ $highlight-bg: $brand-1;
 @import "block-heading";
 // 分割线
 @import "block-hr";
+// iframe块
+@import "block-iframe";
 // 键盘块
 @import "block-kbd";
 // 链接块
