feat: :sparkles: 优化块嵌入样式，提高可读性

--- a/styles/pages/editor/_block-embed.scss
+++ b/styles/pages/editor/_block-embed.scss
@@ -1,12 +1,13 @@
-$embed-bg: $rc-component-bg;
+$embeds-bg: $rc-ui-bg;
 $embed-border-radius: $rc-bradius-small;
+$embed-bg: $rc-container-bg;
 $embed-shadow: rc-shadow(4);
 $embed-shadow-hover: rc-shadow(8);
 
 //块嵌入
 div[data-type="NodeBlockQueryEmbed"].render-node {
-  background-color: $embed-bg  !important;
-  padding: 34px 16px 16px !important; //8px 28px 8px
+  background-color: $embeds-bg  !important;
+  padding: 35px 16px 16px !important; //8px 28px 8px
   border-radius: $embed-border-radius;
   border: none !important;
 
@@ -16,15 +17,16 @@ div[data-type="NodeBlockQueryEmbed"].render-node {
 
   .protyle-wysiwyg__embed {
     border-radius: $embed-border-radius;
+    background-color: $embed-bg;
     padding: 16px;
     margin-bottom: 16px;
     opacity: 1;
     box-shadow: $embed-shadow  !important;
-    transition: box-shadow 0.3s ease-out;
+    transition: all 0.3s ease-out;
 
     &:hover {
       box-shadow: $embed-shadow-hover  !important;
-      transform: translateY(-1px);
+      transform: translateY(-2px);
     }
   }
 }
