--- a/styles/pages/editor/_index.scss
+++ b/styles/pages/editor/_index.scss
@@ -13,6 +13,8 @@ $highlight-bg: $brand-1;
 @import "block-hr";
 // iframe块
 @import "block-iframe";
+// img块
+@import "block-img";
 // 键盘块
 @import "block-kbd";
 // 链接块
