--- a/styles/pages/editor/_block-code.scss
+++ b/styles/pages/editor/_block-code.scss
@@ -73,7 +73,7 @@ $code-action-bg-active: $gray-4;
       height: 25px;
       border-radius: $code-action-border-radius 0 0 $code-action-border-radius ;
       background-color: $code-action-bg-hover;
-      // margin-top: 3px;
+      margin-top: 3px;
       margin-right: 1px;
 
       // 复制图标
@@ -103,7 +103,7 @@ $code-action-bg-active: $gray-4;
         transform: unset;
       }
 
-      &:active {
+      &:hover {
         background-color: $code-action-bg-active;
       }
     }
@@ -112,7 +112,7 @@ $code-action-bg-active: $gray-4;
     .protyle-action__menu {
       height: 25px;
       width: 24px;
-      // margin-top: 3px;
+      margin: 3px 3px 0 0;
       padding: 0 6px;
       background-color: $code-action-bg-hover;
       border-radius: 0 $code-action-border-radius $code-action-border-radius 0;
@@ -124,7 +124,7 @@ $code-action-bg-active: $gray-4;
         height: 25px;
       }
 
-      &:active {
+      &:hover {
         background-color: $code-action-bg-active;
       }
     }
