--- a/styles/pages/editor/_block-code.scss
+++ b/styles/pages/editor/_block-code.scss
@@ -18,8 +18,12 @@ $code-action-bg-active: $gray-4;
   font-family: "HarmonyOS Sans SC", "JetBrains Mono";
 
   // 代码块按钮组
-  &:hover .protyle-icons {
-    opacity: 1 !important;
+  &:hover {
+
+    .protyle-action__language,
+    .protyle-icon {
+      opacity: 1 !important;
+    }
   }
 
   .protyle-action {
@@ -69,7 +73,7 @@ $code-action-bg-active: $gray-4;
     // 代码复制按钮
     .protyle-action__copy {
       @extend %code-action;
-      padding: 4px 6px;
+      padding: 0px 6px;
       height: 25px;
       border-radius: $code-action-border-radius 0 0 $code-action-border-radius ;
       background-color: $code-action-bg-hover;
@@ -80,8 +84,7 @@ $code-action-bg-active: $gray-4;
       svg {
         display: flex;
         width: 11px;
-        height: 11px;
-        margin-top: 3px;
+        height: 25px;
         margin-right: 4px;
       }
 
@@ -89,7 +92,7 @@ $code-action-bg-active: $gray-4;
       &::after {
         content: "Copy";
         font-size: 11px;
-        line-height: 1.3;
+        line-height: 25px;
         height: 100%;
         position: unset;
         border-radius: unset;
