fix: :bug: 修复视频菜单资源栏输入框的长度问题

--- a/styles/components/_menu.scss
+++ b/styles/components/_menu.scss
@@ -147,6 +147,12 @@ $sub-menu-vertical: 10px;
     }
   }
 
+  .b3-menu__label{
+    input{
+      width: 100%;
+    }
+  }
+
   // 分割线
   &__separator {
     // margin-left: 0px;
