fix: :bug: 去除新版readme界面中预览图的下外边距

--- a/styles/pages/dialog/_readme.scss
+++ b/styles/pages/dialog/_readme.scss
@@ -64,10 +64,8 @@ $dialog-readme-main-margin: 96px;
 
     // 预览图
     .item__preview {
-      // border-radius: $dialog-readme-main-border-radius;
-      // border-bottom-left-radius: 0;
-      // border-bottom-right-radius: 0;
       border-radius: unset;
+      margin-bottom: 0;
 
       // 预览图全屏时
       &--fullscreen {
