fix: :bug: 优化代码选择语言弹窗列表的样式

--- a/styles/pages/editor/_util.scss
+++ b/styles/pages/editor/_util.scss
@@ -90,7 +90,7 @@ $util-textarea-bg: $rc-container-bg;
             &:last-child {
                 margin-bottom: 0;
             }
-
+            margin-right: 4px;
             padding-left: 12px !important;
             // text-transform: capitalize;
         }
