fix: :bug: 修复标题为空时大纲界面显示的bug

--- a/styles/components/_list.scss
+++ b/styles/components/_list.scss
@@ -343,7 +343,7 @@ $list-item-meta-color-focus: $brand-4;
 
     &:empty {
       margin: 0;
-      padding: 0;
+      padding: 0 !important;
     }
   }
 
