fix: :bug: 优化代码语言选择按钮的样式

--- a/styles/pages/editor/_block-code.scss
+++ b/styles/pages/editor/_block-code.scss
@@ -62,8 +62,9 @@ $code-action-bg-active: $gray-4;
         content: "";
         width: 8px;
         height: 20px;
+        margin-left: 5px;
         @include add_icon("expand_more",
-          $code-action-color,
+          $rc-text-placeholder,
           18,
           "no-repeat center"
         );
